# COMCAD_Test

./: .editorconfig  .gitignore  README.md  __init__.py  answers.md  main.py  pyproject.toml  setup.cfg
src/: downloader.py  hasher.py
tests/: test_downloader.py  test_hasher.py
