[tool.nitpick]
style = "https://gitea.radium.group/radium/project-configuration/raw/branch/master/nitpick/all.toml"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.poetry]
name = "COMCAD_Test"
version = "1.0"
description = ""
authors = ["Ivan Gerasimchik <iv.gerasimchik@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
nitpick = "^0.35.0"
wemake-python-styleguide = "^0.18.0"
isort = "^5.7.0"
flake8 = "^7.1.0"
flake8-debugger = "^4.1.2"
flake8-pytest-style = "^1.7.2"
flake8-annotations = "^3.0.1"
flake8-logging-format = "^0.9.0"
flake8-spellcheck = "^0.28.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
Faker = "^20.1.0"
pytest-snapshot = "^0.9.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.group.test.dependencies.pytest-xdist]
extras = ["psutil"]
version = "^3.5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test*.py"
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules"
xfail_strict = "true"
markers = [
    "asyncio: mark test to be run with asyncio",
]
